[workspace]
members = ["crates/use-wave"]
resolver = "2"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustUse/use-wave"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = ["use-wave"]
