[package]
name = "use-wave"
description = "Composable wave primitives for Rust."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-wave"
keywords = ["wave", "frequency", "wavelength", "phase", "physics"]
categories = ["science"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
